--- a/softdesk/Pipfile
+++ b/softdesk/Pipfile
@@ -56,6 +56,7 @@ tqdm = "==4.66.2"
 tzdata = "==2024.1"
 virtualenv = "==20.25.1"
 werkzeug = "==3.0.1"
+django-extensions = "*"
 
 [dev-packages]
 
