--- a/softdesk/Pipfile
+++ b/softdesk/Pipfile
@@ -57,6 +57,7 @@ tzdata = "==2024.1"
 virtualenv = "==20.25.1"
 werkzeug = "==3.0.1"
 django-extensions = "*"
+drf-nested-routers = "*"
 
 [dev-packages]
 
